@@ -1321,6 +1321,9 @@
         wikiuser = "Pauxlo"
     [/entry]
     [entry]
+    	name = "Pentarctagon"
+    [/entry]
+    [entry]
         name = "Peter Elmers"
     [/entry]
     [entry]
