@@ -26,6 +26,7 @@ Version 1.13.4+dev:
    * Improved the dialog for choosing what to do when a player leaves in
      multiplayer.
  * WML engine:
+   * Add color= attribute to [message].
    * Fix some issues with [foreach]
    * Fix some issues with backstab-like weapon specials
    * Support [effect]times=<integer>
